--- a/教程.md
+++ b/教程.md
@@ -110,13 +110,15 @@
 
 **第三方字体（如果没备份的话）**
  - 虽然只要进控制面板-字体看各种DFG开头，GBK结尾，方正，汉仪之类的字体就能判断，但为避免遗漏所以还是走走流程吧~
- - 首先用Powershell导出所有字体的列表:
+首先用Powershell导出所有字体的列表：
 
-    `[System.Reflection.Assembly]::LoadWithPartialName("System.Drawing")`
-    `(New-Object System.Drawing.Text.InstalledFontCollection).Families`
+    [System.Reflection.Assembly]::LoadWithPartialName("System.Drawing")
+    (New-Object System.Drawing.Text.InstalledFontCollection).Families
 
- - 然后对比以下Windows自带的字体（不同地区/语言的字体预装有差距，且以下列表不包括斜体，粗体等变体）:
+然后对比以下Windows自带的字体（不同地区/语言的字体预装有差距，且以下列表不包括斜体，粗体等变体）:
 
+    ::Windows CMD下UTF-8特供空行
+    
     Arial
     Bahnschrift
     Calibri
@@ -174,7 +176,7 @@
     Yu Gothic
     Yu Gothic UI
 
- - 最后进控制面板-字体里挨个导出，压缩包存起来，等新系统装上再一并安装就好了
+最后进控制面板-字体里挨个导出，压缩包存起来，等新系统装上再一并安装就好了
 
 **只有截图或微软账号才能备份的？**
  - 开始菜单设置
