--- a/教程.md
+++ b/教程.md
@@ -112,8 +112,8 @@
  - 虽然只要进控制面板-字体看各种DFG开头，GBK结尾，方正，汉仪之类的字体就能判断，但为避免遗漏所以还是走走流程吧~
 首先用Powershell导出所有字体的列表：
 
-    [System.Reflection.Assembly]::LoadWithPartialName("System.Drawing")
-    (New-Object System.Drawing.Text.InstalledFontCollection).Families
+    `[System.Reflection.Assembly]::LoadWithPartialName("System.Drawing")`
+    `(New-Object System.Drawing.Text.InstalledFontCollection).Families`
 
 然后对比以下Windows自带的字体（不同地区/语言的字体预装有差距，且以下列表不包括斜体，粗体等变体）:
 
