--- a/教程.md
+++ b/教程.md
@@ -110,9 +110,11 @@
 
 **第三方字体（如果没备份的话）**
  - 虽然只要进控制面板-字体看各种DFG开头，GBK结尾，方正，汉仪之类的字体就能判断，但为避免遗漏所以还是走走流程吧~
+
 首先用Powershell导出所有字体的列表：
 
     `[System.Reflection.Assembly]::LoadWithPartialName("System.Drawing")`
+
     `(New-Object System.Drawing.Text.InstalledFontCollection).Families`
 
 然后对比以下Windows自带的字体（不同地区/语言的字体预装有差距，且以下列表不包括斜体，粗体等变体）:
@@ -206,7 +208,7 @@
 
 -----
 
-<font size=6><b>系统安装时</b></font>
+### 系统安装时
  - 删掉多余的EFI启动引导分区
  - 在系统盘建立EFI启动引导分区，以防升级非系统盘忘了把引导分区拷过去以至于开不了机
 
@@ -218,10 +220,9 @@
  - 然后把上面所有的东西一一还原就可以了
  - 为防止安装包在安装时把数据覆盖掉，所以先安装驱动和软件，然后再把数据拷过去吧
 
-这篇教程写的一般也没啥好配图的，那么就这样~
 
+这篇教程写的一般，那么就这样~
 
 #### 打赏信息
 在线丢人，求个打赏，支持一下T_T
 ![pp_tip_qrcode.png](pp_tip_qrcode.png)
-
